<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_StartPage"
            android:title="@string/nav_StartScreen"/>
        <item
            android:id="@+id/nav_Courses"
            android:title="@string/nav_Courses" />
        <item
            android:id="@+id/nav_Dates"
            android:title="@string/nav_Dates" />
        <item
            android:id="@+id/nav_CourseInformation"
            android:title="@string/nav_CourseInformation" />
        <item
            android:id="@+id/nav_ContactForm"
            android:title="@string/nav_ContactForm"  />
        <item
            android:id="@+id/nav_BuildingPlan"
            android:title="@string/nav_BuildingPlan"/>
        <item
            android:id="@+id/nav_Contact"
            android:title="@string/nav_Contact" />


    </group>
</menu>
