<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="396dp"
            android:clickable="true"
            android:contentDescription="Image of the location"
            android:focusable="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/wijnhaven107_locatie" />

    <TextView
        android:id="@+id/contact_info_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_marginLeft="8dp"
        android:text="@string/contact_informatie"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/address_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_info_header"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:text="@string/CMIBuildingAdress"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginStart="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailAdress"
            android:layout_below="@id/contact_info_header"
            android:layout_marginTop="4dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="-240dp"
            android:layout_toRightOf="@id/address_info"
            android:textColorLink="#0000EE"
            android:textSize="14sp"
            android:text="@string/email_contact"
            android:layout_toEndOf="@id/address_info"
            android:clickable="true"
            android:focusable="true"
            android:autoLink="email"
            />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailAdress"
            android:layout_marginStart="60dp"
            android:textColorLink="#0000EE"
            android:autoLink="phone"
            android:layout_marginLeft="-240dp"
            android:layout_toEndOf="@id/address_info"
            android:layout_toRightOf="@id/address_info"
            android:text="@string/phoneNumber"
            android:textColor="@android:color/black"
            android:clickable="true"
            android:focusable="true" />

    <View
        android:id="@+id/divider_below_address"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        android:layout_below="@id/address_info"/>

    <TextView
        android:id="@+id/tijden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_below_address"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:text="@string/openingstijden"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginStart="8dp" />
    <RelativeLayout
        android:id="@+id/times"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/tijden"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp">
        <RelativeLayout
            android:id="@+id/days"
            android:layout_width="100dp"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maandag"
            android:textSize="13sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/monday"
            android:text="@string/dinsdag"
            android:textSize="13sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tuesday"
            android:text="@string/woensdag"
            android:textSize="13sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wednesday"
            android:text="@string/donderdag"
            android:textSize="13sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/thursday"
            android:text="@string/vrijdag"
            android:textSize="13sp"
            android:textColor="@android:color/black"/>
        </RelativeLayout>

        <TextView
                android:id="@+id/time_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/days"
                android:text="@string/time_monday"
                android:textSize="13sp"
            android:layout_toEndOf="@id/days" />
            <TextView
                android:id="@+id/time_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/days"
                android:layout_below="@id/time_monday"
                android:text="@string/time_tuesday"
                android:textSize="13sp"
                android:layout_toEndOf="@id/days" />
            <TextView
                android:id="@+id/time_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/days"
                android:layout_below="@id/time_tuesday"
                android:text="@string/time_wednesday"
                android:textSize="13sp"
                android:layout_toEndOf="@id/days" />
            <TextView
                android:id="@+id/time_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/days"
                android:layout_below="@id/time_wednesday"
                android:text="@string/time_thursday"
                android:textSize="13sp"
                android:layout_toEndOf="@id/days" />
            <TextView
                android:id="@+id/time_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/days"
                android:layout_below="@id/time_thursday"
                android:text="@string/time_friday"
                android:textSize="13sp"
                android:layout_toEndOf="@id/days" />
    </RelativeLayout>
        <TextView
            android:id="@+id/warning"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@+id/times"
            android:layout_marginLeft="8dp"
            android:text="@string/warning_tijden"
            android:textSize="13sp"
            android:layout_marginStart="8dp" />
    <View
        android:id="@+id/divider_below_warning"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/warning"
        android:background="?android:attr/listDivider"/>


    <TextView
        android:id="@+id/route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_below_warning"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/routebeschrijving"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginStart="8dp" />
    <TextView
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/route"
        android:text="Met het openbaar vervoer:\nBij metro Beurs uitstappen, oversteken naar het Maritiem Museum. Eenmaal daar, achter het museum bevind zich het standbeeld De Verwoeste Stad. Loop nu langs het kanaal. De ingang staat tegenover de fietsenrekken."
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginStart="8dp" />
    </RelativeLayout>

</ScrollView>