<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/inf_img2"
            android:layout_width="match_parent"
            android:layout_height="258dp"
            android:scaleType="fitXY"
            android:src="@drawable/inf_img2" />

        <TextView
            android:id="@+id/inf_frag_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inf_img2"
            android:layout_margin="8dp"
            android:text="@string/inf_frag_text1"
            />

        <TextView
            android:id="@+id/inf_frag_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inf_frag_text1"
            android:layout_margin="8dp"
            android:text="@string/inf_frag_text2"
            />

        <TextView
            android:id="@+id/inf_frag_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inf_frag_text2"
            android:layout_margin="8dp"
            android:text="@string/inf_frag_text3"
            />

        <TextView
            android:id="@+id/inf_frag_text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inf_frag_text3"
            android:layout_margin="8dp"
            android:text="@string/inf_frag_text4"
            />

    </RelativeLayout>
</ScrollView>