<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff" />

    <Spinner
        android:id="@+id/spinner_building"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/spinner_floor"
        android:clickable="true"
        android:entries="@array/buildingArray"
        android:focusable="true"
        android:prompt="@string/array_buildingText"
        android:spinnerMode="dropdown" />


    <Spinner
        android:id="@+id/spinner_floor"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/tv_header"
        android:clickable="true"
        android:entries="@array/floorArray"
        android:focusable="true"
        android:prompt="@string/array_floorText"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/button_refreshPDF"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:text="@string/button_refreshPDF"
        android:layout_below="@id/spinner_building"
        android:layout_centerHorizontal="true"/>

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfView_legend"
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:layout_below="@id/button_refreshPDF"
        android:contentDescription="@string/ExplanationLegend" />

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_below="@id/pdfView_legend"/>



</RelativeLayout>

