<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/comm_img2"
        android:layout_width="match_parent"
        android:layout_height="258dp"
        android:scaleType="fitStart"
        android:src="@drawable/comm_img2" />

    <TextView
        android:id="@+id/comm_frag_text1"
        android:layout_margin="8dp"
        android:layout_below="@id/comm_img2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comm_frag_text1"
        />

    <TextView
        android:id="@+id/comm_frag_text2"
        android:layout_margin="8dp"
        android:layout_below="@id/comm_frag_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comm_frag_text2"
        />

    <TextView
        android:id="@+id/comm_frag_text3"
        android:layout_margin="8dp"
        android:layout_below="@id/comm_frag_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comm_frag_text3"
        />

</RelativeLayout>
</ScrollView>